# HttpFlvSDK

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: HttpFLVDef.h  HttpFLVSvrSdk.h
sample/server/: server_demo.cpp
src/api/: HttpFLVSvrSdk.cpp
src/base/: httpserver.cpp  httpserver.h
src/client/: client_session.cpp  client_session.h
src/http/: httpclient_agent.cpp  httpclient_agent.h  httpserver.cpp
src/media/: flv_packer.cpp  flv_packer.h
src/msg/: MsgQueue.h
src/stream/: stream_session.h
